--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -16,15 +16,18 @@ body{
 }
 nav #nombre{
 	font-size: 2rem;
-	margin-left: 0.5rem;
+	margin-left: 1rem;
 	margin-right: auto;
 }
 nav{
 	background-color: $principal;
 }
+.nav-link{
+	font-size: 1.5rem;
+}
 nav #logo{
-	width: 2.5rem;
-	height: 2.5rem;
+	width: 4rem;
+	height: 4rem;
 }
 #hamburguesa{
 	color: $texto;
@@ -78,13 +81,16 @@ section{
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
-#opiniones h2, #portfolio h2, #servicios h2, #aboutus h2{
+#opiniones h2, #portfolio h2, #servicios h2, #aboutus h2, #video h2{
 	text-decoration-color: $principal;
 	text-decoration: underline;
 	font-size: 3rem;
 }
+#video h2{
+	text-decoration: none;
+}
 #opiniones blockquote{
-	font-size: 1rem;
+	font-size: 1.2rem;
 	text-align: center;
 }
 #newsletter{
