--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -81,12 +81,12 @@ section{
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
-#opiniones h2, #portfolio h2, #servicios h2, #aboutus h2, #video h2{
+#opiniones h2, #portfolio h2, #servicios h2, #aboutus h2, #video h2, #contacto h2{
 	text-decoration-color: $principal;
 	text-decoration: underline;
 	font-size: 3rem;
 }
-#video h2{
+#video h2, #contacto h2{
 	text-decoration: none;
 }
 #opiniones blockquote{
