--- a/css/estilos.css
+++ b/css/estilos.css
@@ -71,7 +71,8 @@ h1, h2, h3, h5, h6 {
 }
 
 .jumbotron {
-  background-image: url("../img/codeBG.png");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../img/computerBG.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/computerBG.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
