--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -71,7 +71,10 @@ h1, h2, h3, h5, h6{
 }
 
 .jumbotron{
-	background-image: url("../img/codeBG.png");
+	background-image: linear-gradient(
+		rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)),
+	    url(../img/computerBG.jpg);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
