mod.ubicacion tag h2

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -88,6 +88,7 @@ section{
 	text-decoration-color: $principal;
 	text-decoration: underline;
 	font-size: 3rem;
+	padding-top: 3rem;
 }
 #video h2, #contacto h2{
 	text-decoration: none;
