--- a/css/estilos.css
+++ b/css/estilos.css
@@ -89,6 +89,7 @@ section {
           text-decoration-color: #027DC1;
   text-decoration: underline;
   font-size: 3rem;
+  padding-top: 3rem;
 }
 
 #video h2, #contacto h2 {
